@@ -19,19 +19,21 @@
 #  http://www.gnu.org/copyleft/gpl.html
 #
 
-import json
-import sys
-import requests
-import requests_cache
-import hashlib
+import base64
 import binascii
-import struct
+import hashlib
+import json
 from math import ceil
 import os
+import pickle
 import re
-import base64
-import xbmcaddon
+import requests
+import requests_cache
+import struct
+import sys
+
 import xbmc
+import xbmcaddon
 
 if sys.version_info.major == 2:
     # python 2
@@ -481,6 +483,37 @@ def decrypt_uri(e):
     decrypted = aes_cbc_decrypt(data, key, iv)
     return intlist_to_bytes(
         decrypted[:-decrypted[-1]]).decode('utf-8').split('?')[0]
+
+
+class PasteBin():
+    def __init__(self):
+        self.user_key = ''
+        self.generate_user_key()
+        self.dev_key = 'wGaKCLlf5LHqL-wIqHOYqPJx0e8qEf88'
+
+    def generate_user_key(self):
+        drnu_secret = b'gASVdwAAAAAAAAB9lCiMC2FwaV9kZXZfa2V5lIwgd0dhS0NMbGY1TEhxTC13SXFIT1lxUEp4MGU4cUVmODiUjA1hcGlfdXNlcl9uYW1llIwIZHJudWtvZGmUjBFhcGlfdXNlcl9wYXNzd29yZJSMD2J0dXhIYzZRam4zRW5GSpR1Lg=='
+        data = pickle.loads(base64.b64decode(drnu_secret))
+        answer = requests.post("https://pastebin.com/api/api_login.php", data=data)
+        if answer.status_code == 200:
+            self.user_key = answer.content
+
+    def paste(self, message, expire='6M'):
+        params = {
+            "api_dev_key": self.dev_key,
+            'api_user_key': self.user_key,
+            'api_option':'paste',
+            'api_paste_name':'kodi_fail_log',
+            'api_paste_code':message,
+            'api_paste_format': 'python',
+            'api_paste_expire_date': expire,
+            'api_paste_private': 1
+        }
+        answer = requests.post("https://pastebin.com/api/api_post.php", data=params)
+        if answer.status_code == 200:
+            return answer.content.decode('utf-8')
+        return ''
+
 
 class ApiException(Exception):
     pass
